--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientPastWeekMacroChart.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientPastWeekMacroChart.cshtml
@@ -9,6 +9,7 @@
         .ValueField("value")
         .Label(l => l
             .Visible(true)
+            .Position(PieChartLabelPosition.Inside)
             .Connector(c => c
                 .Visible(true)
                 .Width(1)
