--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -34,6 +34,7 @@
         Html.RenderAction("ClientPerformanceGauge", "ClientCharts", new { userId = Session["UserId"] });
         Html.RenderAction("ClientPastWeekMacroChart", "ClientCharts", new { userId = Session["UserId"] });
         Html.RenderAction("ClientCurrentWeekMacroGauge", "ClientCharts", new { userId = Session["UserId"] });
+        Html.RenderAction("PvAMacroPieChart", "ClientCharts");
     });
 }).GetHtml()
 </div>
