--- a/KetoSavageWeb/KetoSavageWeb/Content/Site.css
+++ b/KetoSavageWeb/KetoSavageWeb/Content/Site.css
@@ -84,9 +84,9 @@ html, body {
     background-color: #000000;
 }
 
-    .dxpnl-edge.b.footerPane.panel {
-        padding: 0;
-    }
+.dxpnl-edge.b.footerPane.panel {
+    padding: 0;
+}
 
 .footerMenu {
     float: right;
@@ -776,7 +776,7 @@ html, body {
 #pvaMacroPieChartDiv {
     display: inline-block;
     background-color: #0a0a0a;
-    height: 300px;
+    height: 250px;
     position: relative;
 }
 
@@ -17685,7 +17685,7 @@ html, body {
     #loginForm, #form-container, #testPopup {
         width: 95%;
         margin: 5px;
-        background-color: blue;
+        /*background-color: blue;*/
         padding: 5px;
     }
 
@@ -17698,7 +17698,7 @@ html, body {
 @media only screen and (min-width: 600px) {
     #loginForm, #form-container {
         width: 90%;
-        background-color: red;
+        /*background-color: red;*/
     }
 
     #currentWeekGaugePanel {
