--- a/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_topPerformersLifetime.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_topPerformersLifetime.cshtml
@@ -1,23 +1,23 @@
 ﻿@(Html.DevExtreme().Chart()
-    .ID("bottomPerformers")
+    .ID("topPerformersLifetime")
     .Title(t => t
-        .Text("Bottom 5 Performers - Previous Week")
+        .Text("Top 5 Performers - Lifetime")
         .Font(f => f.Color("White").Size(14).Weight(200))
     )
     .Size(si => si
         .Height(250)
     )
-    .DataSource(d => d.WebApi().Controller("ChartsAPI").LoadAction("GetComplianceScore").LoadParams(new { type = "bottom", lifetime = "false" }))
+    .DataSource(d => d.WebApi().Controller("ChartsAPI").LoadAction("GetComplianceScore").LoadParams(new { type = "top", lifetime = "true" }))
     //.DataSourceOptions(o => o
     //.Filter(@"{""Score"", "">5"")
     .CommonSeriesSettings(c => c
         .ArgumentField("ClientName")
         .Type(SeriesType.Bar)
-
+        
     )
     .Series(s => s
         .Add().ValueField("Score")
         .Name("Score")
-
+        
     )
 )
